--- a/api/.env
+++ b/api/.env
@@ -1,4 +1,4 @@
 PORT=5001
-CLIENT_URL=http://localhost:5173
+CLIENT_URL=https://vdovicheff-bank-2.onrender.com
 ACCESS_TOKEN_SECRET=access_helloworld
 REFRESH_TOKEN_SECRET=refresh_helloworld
